# work_api

./: .gitignore  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2026_03_13_2333-03789dc7529c_all_tables.py  2026_04_02_1319-6930ab1aec27_updated_job_model_remote_type_now_can_.py
app/core/: config.py  dependencies.py  security.py
app/db/: database.py
app/models/: __init__.py  base.py  filter.py  job.py  notification_settings.py  refresh_token.py  sent_job.py  user.py
app/models/enums/: djinni_enum.py  dou_enum.py  job_enum.py  user_enum.py
app/repository/: base.py  filter.py  job.py  nofication_settings.py  refresh_token.py  sent_job.py  user.py
app/routers/: api.py
app/routers/v1/: admin.py  auth.py  filter.py  health.py  job.py  nofication.py  user.py
app/schemas/: auth.py  filter.py  job.py  nofication.py  parsers.py  user.py
app/services/: auth.py  filter.py  job.py  nofication.py  user.py
bot/: main.py  states.py  storage.py  utils.py
bot/handlers/: filters.py  keyboards.py  start.py  stop.py  vacancies.py
parsers/: base.py  djinni.py  dou.py  workua.py
tests/: djinni_test.py
