[project]
name = "work-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Norix10"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "aiogram (>=3.26.0,<4.0.0) ; python_version == \"3.14\"",
    "httpx (>=0.28.1,<0.29.0)",
    "requests (>=2.33.1,<3.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^26.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
